--- a/zero/15-Eversong/aiplayerbot.conf
+++ b/zero/15-Eversong/aiplayerbot.conf
@@ -10,19 +10,18 @@ AiPlayerbot.EnableGuildTasks = 1
 AiPlayerbot.enabled=1
 AiPlayerbot.DeleteRandomBotAccounts = 0
 AiPlayerbot.RandomBotJoinLfg = 1
+AiPlayerbot.BotAutologin = 1
 AiPlayerbot.RandomBotAutologin = 1
 AiPlayerbot.RandomBotMinLevel = 1
 AiPlayerbot.RandomChangeMultiplier = 1
 AiPlayerbot.MinRandomBots = 500
 AiPlayerbot.MaxRandomBots = 500
-AiPlayerbot.RandomBotAccountCount = 200
+AiPlayerbot.RandomBotAccountCount = 60
 AiPlayerbot.RandomBotMaps = 0,1
 AiPlayerbot.LogInGroupOnly = 1
 AiPlayerbot.ExpireActionTime = 5000
 
-AiPlayerbot.ShootDistance = 11
-AiPlayerbot.FleeDistance = 5
-AiPlayerbot.AoeRadius = 7
+AiPlayerbot.DispelAuraDuration = 7000
 
 # Warrior
 AiPlayerbot.RandomClassSpecProbability.1.0 = 20
@@ -61,6 +60,6 @@ AiPlayerbot.RandomClassSpecProbability.11.0 = 10
 AiPlayerbot.RandomClassSpecProbability.11.1 = 45
 AiPlayerbot.RandomClassSpecProbability.11.2 = 45
 
-AiPlayerbot.CommandServerPort = 8888
+#AiPlayerbot.CommandServerPort = 8888
 #AiPlayerbot.RandomBotCombatStrategies = +dps,+attack weak
 #AiPlayerbot.RandomBotNonCombatStrategies = +loot
