--- a/zero/15-Eversong/mangosd.conf
+++ b/zero/15-Eversong/mangosd.conf
@@ -3,7 +3,7 @@
 ################################################################################
 
 [MangosdConf]
-ConfVersion=2016032801
+ConfVersion=2017021100
 
 ################################################################################
 # CONNECTIONS AND DIRECTORIES
@@ -60,17 +60,17 @@ ConfVersion=2016032801
 #
 ################################################################################
 
-RealmID                      = 1
+RealmID                      = 11
 DataDir                      = ".."
 LogsDir                      = ""
 LoginDatabaseInfo            = "127.0.0.1;3306;root;1;zero_realm"
 WorldDatabaseInfo            = "127.0.0.1;3306;root;1;zero_world"
-CharacterDatabaseInfo        = "127.0.0.1;3306;root;1;zero_characters_19"
+CharacterDatabaseInfo        = "127.0.0.1;3306;root;1;zero_characters_15"
 LoginDatabaseConnections     = 1
-WorldDatabaseConnections     = 1
-CharacterDatabaseConnections = 1
+WorldDatabaseConnections     = 20
+CharacterDatabaseConnections = 20
 MaxPingTime                  = 5
-WorldServerPort              = 8085
+WorldServerPort              = 8185
 BindIP                       = "0.0.0.0"
 
 ################################################################################
@@ -219,7 +219,7 @@ GridUnload                        = 1
 LoadAllGridsOnMaps                = ""
 GridCleanUpDelay                  = 300000
 MapUpdateInterval                 = 100
-MapUpdateThreads                  = 2
+MapUpdateThreads                  = 8
 ChangeWeatherInterval             = 600000
 PlayerSave.Interval               = 60000
 PlayerSave.Stats.MinLevel         = 0
@@ -771,7 +771,7 @@ SD3ErrorLogFile              = "scriptdev3-errors.log"
 #
 ################################################################################
 
-GameType                                  = 1
+GameType                                  = 0
 RealmZone                                 = 1
 DBC.Locale                                = 255
 DeclinedNames                             = 0
@@ -785,7 +785,7 @@ CharactersCreatingDisabled                = 0
 CharactersPerAccount                      = 50
 CharactersPerRealm                        = 10
 SkipCinematics                            = 0
-MaxPlayerLevel                            = 19
+MaxPlayerLevel                            = 15
 StartPlayerLevel                          = 1
 StartPlayerMoney                          = 0
 MaxHonorPoints                            = 75000
@@ -803,7 +803,7 @@ AllFlightPaths                            = 0
 InstantFlightPaths                        = 0
 AlwaysMaxSkillForLevel                    = 0
 ActivateWeather                           = 1
-CastUnstuck                               = 1
+CastUnstuck                               = 0
 MaxSpellCastsInChain                      = 20
 RabbitDay                                 = 0
 Instance.IgnoreLevel                      = 0
@@ -834,7 +834,7 @@ BeepAtStart                               = 1
 ShowProgressBars                          = 1
 WaitAtStartupError                        = 10
 PlayerCommands                            = 1
-Motd                                      = "Welcome to Mangos Zero"
+Motd                                      = "Welcome to Eversong"
 
 ################################################################################
 # PLAYER INTERACTION
@@ -1217,7 +1217,7 @@ Visibility.Distance.Continents     = 333
 Visibility.Distance.Instances      = 333
 Visibility.Distance.BG             = 333
 Visibility.Distance.InFlight       = 333
-Visibility.Distance.Grey.Unit      = 1
+Visibility.Distance.Grey.Unit      = 10
 Visibility.Distance.Grey.Object    = 333
 Visibility.RelocationLowerLimit    = 10
 Visibility.AIRelocationNotifyDelay = 1000
