--- a/zero/Tanaris/aiplayerbot.conf
+++ b/zero/Tanaris/aiplayerbot.conf
@@ -13,16 +13,17 @@ AiPlayerbot.RandomBotJoinLfg = 1
 AiPlayerbot.RandomBotAutologin = 1
 AiPlayerbot.RandomBotMinLevel = 1
 AiPlayerbot.RandomChangeMultiplier = 1
-AiPlayerbot.MinRandomBots = 500
-AiPlayerbot.MaxRandomBots = 500
-AiPlayerbot.RandomBotAccountCount = 200
+AiPlayerbot.MinRandomBots = 2000
+AiPlayerbot.MaxRandomBots = 2000
+AiPlayerbot.RandomBotAccountCount = 500
 AiPlayerbot.RandomBotMaps = 0,1
 AiPlayerbot.LogInGroupOnly = 1
 AiPlayerbot.ExpireActionTime = 5000
 
-AiPlayerbot.ShootDistance = 11
+AiPlayerbot.ShootDistance = 13
 AiPlayerbot.FleeDistance = 5
 AiPlayerbot.AoeRadius = 7
+AiPlayerbot.DispelAuraDuration = 7000
 
 # Warrior
 AiPlayerbot.RandomClassSpecProbability.1.0 = 20
