--- a/zero/Plaguelands/aiplayerbot.conf
+++ b/zero/Plaguelands/aiplayerbot.conf
@@ -10,19 +10,21 @@ AiPlayerbot.EnableGuildTasks = 1
 AiPlayerbot.enabled=1
 AiPlayerbot.DeleteRandomBotAccounts = 0
 AiPlayerbot.RandomBotJoinLfg = 1
+AiPlayerbot.BotAutologin = 1
 AiPlayerbot.RandomBotAutologin = 1
 AiPlayerbot.RandomBotMinLevel = 1
 AiPlayerbot.RandomChangeMultiplier = 1
-AiPlayerbot.MinRandomBots = 500
-AiPlayerbot.MaxRandomBots = 500
-AiPlayerbot.RandomBotAccountCount = 200
+AiPlayerbot.MinRandomBots = 1500
+AiPlayerbot.MaxRandomBots = 1500
+AiPlayerbot.RandomBotAccountCount = 350
 AiPlayerbot.RandomBotMaps = 0,1
 AiPlayerbot.LogInGroupOnly = 1
 AiPlayerbot.ExpireActionTime = 5000
 
-AiPlayerbot.ShootDistance = 11
+AiPlayerbot.ShootDistance = 13
 AiPlayerbot.FleeDistance = 5
-AiPlayerbot.AoeRadius = 7
+AiPlayerbot.AoeRadius = 9
+AiPlayerbot.DispelAuraDuration = 7000
 
 # Warrior
 AiPlayerbot.RandomClassSpecProbability.1.0 = 20
